Fixed HardwareDevice bugs, 3-wheel odometry, Refactored start-position names
Fixed absolute encoders having their position reset to 0.0 on initialization.
Fixed PID period being 1000x longer than it should have been.
Added basic intake code for testing.
Renamed StateTypes to be accurate for this year's mechanisms.
Renamed StartPosition "Far" side to back-board.
Deleted Two-Wheel localizer due to using 3-wheel localizer with april tags.
Added webcam to the configuration xml.
Added diagnostic mode to display odometry encoder positions. This OpMode will eventually output all possible sensor data.

Commented RobotHardware.

--- a/TeamCode/src/main/res/xml/main.xml
+++ b/TeamCode/src/main/res/xml/main.xml
@@ -21,4 +21,5 @@
             <AnalogInput                name="Back Right Encoder"   port="2" />
         </LynxModule>
     </LynxUsbDevice>
+    <Webcam name="Webcam 1" serialNumber="6F22D62F" />
 </Robot>
